Update README, changelog and description in pubspec
Signed-off-by: Avinaba Dalal <d97.avinaba@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: colors_stuff
-description: A new Flutter package project.
+description: A library that provides useful functions for working with colors.
 version: 0.0.1
 homepage:
 
