--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: colors_stuff
 description: A library that provides useful functions for working with colors.
 version: 0.0.1
-homepage:
+repository: https://github.com/corphish/colors_stuff
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
