pubspec: Bump version
Signed-off-by: Avinaba Dalal <d97.avinaba@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: colors_stuff
 description: A library that provides useful functions for working with colors.
-version: 0.0.1
+version: 0.0.1+1
 repository: https://github.com/corphish/colors_stuff
 
 environment:
